--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,35 @@
 {
-  "name": "LIA",
+  "name": "LIA - Assistente Virtual",
   "short_name": "LIA",
+  "description": "LIA é sua assistente virtual inteligente, que conversa, lembra tarefas e interage com você.",
   "start_url": "index.html",
+  "scope": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#121212",
   "theme_color": "#212121",
+  "lang": "pt-BR",
   "icons": [
     {
       "src": "icon192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["utilities", "productivity"],
+  "related_applications": [
+    {
+      "platform": "play",
+      "id": "com.example.lia",
+      "url": "https://play.google.com/store/apps/details?id=com.example.lia"
+    }
+  ],
+  "prefer_related_applications": false
 }
