--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,32 @@
 {
-  "id": "/index.html",
-  "name": "LIA - Assistente Virtual",
+  "name": "LIA",
   "short_name": "LIA",
-  "description": "LIA é sua assistente virtual inteligente, que conversa, lembra tarefas e interage com você.",
   "start_url": "index.html",
-  "scope": "/",
   "display": "standalone",
-  "display_override": ["window-controls-overlay", "fullscreen", "minimal-ui"],
-  "orientation": "portrait",
   "background_color": "#121212",
   "theme_color": "#212121",
-  "lang": "pt-BR",
-  "dir": "ltr",
-  "categories": ["utilities", "productivity"],
   "icons": [
     {
       "src": "icon192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ],
-  "shortcuts": [
+  "screenshots": [
     {
-      "name": "Abrir Chat",
-      "short_name": "Chat",
-      "description": "Abrir a janela de conversa com LIA",
-      "url": "/chat.html",
-      "icons": [{ "src": "icon192.png", "sizes": "192x192" }]
+      "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...==",
+      "sizes": "1080x1920",
+      "type": "image/png"
     },
     {
-      "name": "Configurações",
-      "short_name": "Config",
-      "description": "Abrir as configurações da LIA",
-      "url": "/config.html",
-      "icons": [{ "src": "icon192.png", "sizes": "192x192" }]
+      "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...==",
+      "sizes": "1080x1920",
+      "type": "image/png"
     }
-  ],
-  "related_applications": [
-    {
-      "platform": "play",
-      "id": "com.example.lia",
-      "url": "https://play.google.com/store/apps/details?id=com.example.lia"
-    }
-  ],
-  "prefer_related_applications": false
+  ]
 }
